--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,19 +1,16 @@
 name: Publish Docker Image to GitHub Packages
 
 on:
-  # Déclenche le workflow lors d'un push sur la branche 'main'
   push:
     branches: [ main ]
 
 env:
-  # Nom de l'image (doit être en minuscules)
   IMAGE_NAME: ue19-lab-05
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     
-    # Permissions nécessaires pour interagir avec GitHub Packages
     permissions:
       contents: read
       packages: write
@@ -28,19 +25,16 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          # Le registre GitHub Packages
           registry: ghcr.io
-          # Utilisation du nom d'utilisateur GitHub
           username: ${{ github.actor }}
-          # Utilisation du jeton GITHUB_TOKEN fourni par GitHub Actions
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
+      - name: 📌 Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ghcr.io/${{ github.repository }}
-          tags: |
+          tags: | 
             type=raw,value=latest,enable={{isSourceBranch('main')}}
             type=sha,prefix=,suffix=,format=short
 
@@ -49,9 +43,6 @@ jobs:
         with:
           context: .
           push: true
-          # Les tags générés par l'étape 'meta' (ex: ghcr.io/lamplum/ue19-lab-05:latest)
           tags: ${{ steps.meta.outputs.tags }}
-          # Les labels générés par l'étape 'meta'
           labels: ${{ steps.meta.outputs.labels }}
-          # Utilisation de la plateforme Linux AMD64
           platforms: linux/amd64
