--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,31 +1,31 @@
-name: Publish Docker Image to GitHub Packages
+name: Build and Publish to GHCR
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
+    tags: [ 'v*.*.*' ]
+
+permissions:
+  contents: read
+  packages: write
 
 env:
-  IMAGE_NAME: ue19-lab-05
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     
-    permissions:
-      contents: read
-      packages: write
-      
     steps:
-      - name: Checkout code
+      # 1. Récupération du code source
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        
-      - name: Login to GitHub Container Registry
+      - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -33,16 +33,16 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}
-          tags: | 
-            type=raw,value=latest,enable={{isSourceBranch('main')}}
-            type=sha,prefix=,suffix=,format=short
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=ref,event=branch
+            type=ref,event=tag
 
-      - name: Build and Push Docker image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64
